[package]
name = "rewind"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "TUI for Replay — watch, control, and understand autonomous software orchestration"

[[bin]]
name = "rewind"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
